Sat Jun 10 22:11:45 1995  Tom Yu  (tlyu@dragons-lair)

	* adm_proto.h: update krb5_auth_context stuff

Fri Jun  9 18:42:30 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Thu Jun 8 14:41:00 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_proto.h - Add prototypes for logging routines.  Also, if
		kdb.h has not been included, add null structure for entry
		data structure so that we don't strictly require kdb.h.

Thu Jun  8 11:11:24 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* Makefile.in (install): Don't install the install/krb5 header files.

Wed Jun  7 16:23:51 1995    <tytso@rsx-11.mit.edu>

	* Makefile.in: Process osconf.h using PREFIX and EXEC_PREFIX
		instead of KRB5ROOT.

	* k5-config.h: Remove old defines for krb.conf and krb.realms,
		which are now obsolete.

Mon Jun 5 13:47:30 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_proto.h - Add new arguments to krb5_adm_connect() for support
		of specifiable credentials caches and ticket lifetimes.


Thu Jun 1 14:28:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm.h: Change the default admin port to 464.

Tue May 30 17:33:09 1995 Keith Vetter (keithv@fusion.com)

	* adm_proto.h: removed INTERFACE from 2 non-exported functions.

Tue May 30 10:22:57 1995 Keith Vetter (keithv@fusion.com)

	* adm_proto.h: conditionally removed for Windows two prototypes
	   that use the database.
	* k5-config.h: bumped MAXPATHLEN and removed need for the kdb.h file.		

Fri May 26 10:17:12 1995 Keith Vetter (keithv@fusion.com)

	* adm_proto.h: added more missing INTERFACE.
	* los-proto.h: moved in prototype for gmt_mktime().

Thu May 25 19:27:45 1995 Keith Vetter (keithv@fusion.com)

	* adm_proto.h: two function's prototype were missing INTERFACE.
	* k5-config.h: kadm needs the kdb.h file.

Thu May 25 15:39:31 1995 Keith Vetter (keithv@fusion.com)

	* los-proto.h: moved in the prototype for krb5_make_fulladdr.
