@@ -31,106 +31,106 @@
 
 /* libos.spec */
 krb5_error_code krb5_read_password
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   const char *,
 		   const char *,
 		   char *,
 		   int * ));
 krb5_error_code krb5_lock_file
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   FILE *,
 		   char *,
 		   int  ));
 krb5_error_code krb5_unlock_file
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   FILE *,
 		   char * ));
 int krb5_net_read
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   int ,
 		   char *,
 		   int  ));
 int krb5_net_write
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   int ,
 		   const char *,
 		   int  ));
 krb5_error_code krb5_sendto_kdc
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   const krb5_data *,
 		   const krb5_data *,
 		   krb5_data * ));
 krb5_error_code krb5_get_krbhst
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   const krb5_data *,
 		   char *** ));
 krb5_error_code krb5_free_krbhst
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   char * const * ));
 krb5_error_code krb5_aname_to_localname
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   krb5_const_principal,
 		   const int,
 		   char * ));
 krb5_error_code krb5_get_host_realm
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   const char *,
 		   char *** ));
 krb5_error_code krb5_free_host_realm
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   char * const * ));
 krb5_error_code krb5_get_realm_domain
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   const char *,
 		   char ** ));
 krb5_boolean krb5_kuserok
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   krb5_principal, const char *));
 krb5_error_code krb5_random_confounder
-	PROTOTYPE((int,
+	KRB5_PROTOTYPE((int,
 		   krb5_pointer ));
 krb5_error_code krb5_gen_replay_name
-    PROTOTYPE((krb5_context,
+    KRB5_PROTOTYPE((krb5_context,
 		   const krb5_address *,
 	       const char *,
 	       char **));
 krb5_error_code krb5_gen_portaddr
-    PROTOTYPE((krb5_context,
+    KRB5_PROTOTYPE((krb5_context,
 		   const krb5_address *,
 	       krb5_const_pointer,
 	       krb5_address **));
 krb5_error_code krb5_create_secure_file
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   const char * pathname));
 krb5_error_code krb5_sync_disk_file
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   FILE *fp));
 
 
 krb5_error_code krb5_read_message 
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   krb5_pointer, 
 		   krb5_data *));
 krb5_error_code krb5_write_message 
-	PROTOTYPE((krb5_context,
+	KRB5_PROTOTYPE((krb5_context,
 		   krb5_pointer, 
 		   krb5_data *));
 
 krb5_error_code krb5_os_init_context
-        PROTOTYPE((krb5_context));
+        KRB5_PROTOTYPE((krb5_context));
 
 void krb5_os_free_context
-        PROTOTYPE((krb5_context));
+        KRB5_PROTOTYPE((krb5_context));
 
 krb5_error_code krb5_find_config_files
-        PROTOTYPE(());
+        KRB5_PROTOTYPE(());
 
 krb5_error_code krb5_make_fulladdr
-    PROTOTYPE((krb5_context,
+    KRB5_PROTOTYPE((krb5_context,
 	       krb5_address *,
 	       krb5_address *,
 	       krb5_address *));
 
-time_t gmt_mktime PROTOTYPE((struct tm *));
+time_t gmt_mktime KRB5_PROTOTYPE((struct tm *));
 
 #endif /* KRB5_LIBOS_PROTO__ */
